--- a/nodebird-vue/ch1/front/package.json
+++ b/nodebird-vue/ch1/front/package.json
@@ -20,5 +20,10 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2"
+  },
+  "config": {
+    "nuxt": {
+      "port" : "3080"
+    }
   }
 }
