--- a/nodebird-vue/ch1/front/package.json
+++ b/nodebird-vue/ch1/front/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "axios": "^0.19.2",
+    "lodash.throttle": "^4.1.1",
     "nuxt": "^2.14.0",
     "vue": "^2.6.11",
     "vuetify": "^2.3.6"
@@ -23,7 +24,7 @@
   },
   "config": {
     "nuxt": {
-      "port" : "3080"
+      "port": "3080"
     }
   }
 }
